--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1>AIRCOLD</h1>
             <ul>
-                <li>HOME</li>
+                <li><a href="https://www.figma.com/file/AxgmlgOUyMx1YctX2x2QCu/e-commerce-shop-(Community)-(Copy)?node-id=0%3A1">HOME</a></li>
                 <li>SHOP</li>
             </ul>
             <div class="options">
@@ -21,6 +21,9 @@
                 <img src="./icons/profile.svg" alt="Корзина" />
             </div>
         </header>
+        <section>
+
+        </section>
     </main>
 </body>
 </html>
