--- a/index.html
+++ b/index.html
@@ -22,8 +22,19 @@
             </div>
         </header>
         <section>
+            <h2>Rovex</h2>
+            <h3>Smart RS-09PXI1</h3>
+            <div class="content-box">Content box</div>
+            <div class="goods">
+                <img src="./photos/conditioner_001.png" alt="001">
+            </div>
 
         </section>
+        <footer>
+            <div>
+                Политика конфиденциальности
+            </div>
+        </footer>
     </main>
 </body>
 </html>
