Исправил абс. позиционирование и флексбокс

--- a/index.html
+++ b/index.html
@@ -21,20 +21,22 @@
                 <img src="./icons/profile.svg" alt="Корзина" />
             </div>
         </header>
-        <section>
-            <h2>Rovex</h2>
-            <h3>Smart RS-09PXI1</h3>
-            <div class="content-box">Content box</div>
-            <div class="goods">
+        <section class="goods">
+            <div class="goods-info">
+                <h2>Rovex</h2>
+                <h3>Smart RS-09PXI1</h3>
+                <!-- <div class="content-box">Content box</div> -->
+            </div>
+            <div class="goods-photo">
                 <img src="./photos/conditioner_001.png" alt="001">
             </div>
 
         </section>
-        <footer>
+        <!-- <footer>
             <div>
                 Политика конфиденциальности
             </div>
-        </footer>
+        </footer> -->
     </main>
 </body>
 </html>
